fix: header logo & sidebar placeholder alignment

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -7,6 +7,7 @@
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 4fr;
+  grid-template-rows: auto auto auto auto;
   gap: 4px;
 }
 
@@ -21,14 +22,21 @@
 .header {
   background-color: #393f4d;
   grid-column: 1 / -1;
+  grid-row: 1;
   display: grid;
   grid-template-columns: 1fr 4fr;
+  gap: 4px;
+}
+
+.logo {
+  text-align: left;
 }
 
 .menu ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   list-style: none;
+  gap: 10px;
 }
 
 .menu li {
@@ -38,6 +46,7 @@
 .sidebar {
   background-color: #C50208;
   grid-column: 1;
+  grid-row: 2 / 4;
   display: grid;
   gap: 50px;
 }
@@ -48,6 +57,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  place-items: center;
 }
 
 
@@ -63,6 +74,7 @@
 .nav {
   background-color: #C50208;
   grid-column: 2;
+  grid-row: 2;
 }
 
 .nav ul {
@@ -79,6 +91,7 @@
 .article {
   background-color: #bccbde;
   grid-column: 2;
+  grid-row: 3;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 15px;
@@ -112,6 +125,7 @@
 .footer {
   background-color: #393f4d;
   grid-column: 1 / -1;
+  grid-row: 4;
 }
 
 .footer p {
